--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <!-- <script defer src="stuff.js"></script> -->
+    <script defer src="pager.js"></script>
     <script defer src="scripts.js "></script>
 </head>
 <body>
     <canvas id="canvas" width="700px" height="700px"></canvas>
-
 </body>
 </html>
