add a button to toggle rotation on/off

--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
 </head>
 <body>
     <canvas id="canvas" width="700px" height="700px"></canvas>
+    <button id="rotToggle">Rotate</button>
 </body>
 </html>
