refactor code to be more simple and add buttons to translate the object

--- a/index.html
+++ b/index.html
@@ -5,11 +5,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <!-- <script defer src="stuff.js"></script> -->
-    <script defer src="pager.js"></script>
-    <script defer src="scripts.js "></script>
+    <script defer src="cube.js"></script>
+    <script defer src="scriptscp.js"></script>
 </head>
 <body>
     <canvas id="canvas" width="700px" height="700px"></canvas>
     <button id="rotToggle">Rotate</button>
+    <ul class="trans">
+        <li >
+            X-axis
+            <button class="xTrans">+</button>
+            <button class="xTrans">-</button>
+        </li>
+        <li class="yTrans">
+            <button class="yTrans">+</button>
+            <button class="yTrans">-</button>
+        </li>
+        <li class="zTrans">
+            <button class="zTrans">+</button>
+            <button class="zTrans">-</button>
+        </li>
+    </ul>
 </body>
 </html>
