--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
     <!-- <script defer src="stuff.js"></script> -->
     <script defer src="cube.js"></script>
-    <script defer src="scriptscp.js"></script>
+    <script defer src="script.js"></script>
 </head>
 <body>
     <canvas id="canvas" width="700px" height="700px"></canvas>
