Replace setTimeout with requestanimationframe

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <!-- <script defer src="stuff.js"></script> -->
-    <script defer src="teapot.js"></script>
+    <script defer src="cube.js"></script>
     <script defer src="script.js"></script>
 </head>
 <body>
