Add missing labels

--- a/index.html
+++ b/index.html
@@ -18,10 +18,12 @@
             <button class="xTrans">-</button>
         </li>
         <li class="yTrans">
+            Y-axis
             <button class="yTrans">+</button>
             <button class="yTrans">-</button>
         </li>
         <li class="zTrans">
+            Z-axis
             <button class="zTrans">+</button>
             <button class="zTrans">-</button>
         </li>
